# simplematrixbotlib

./: .gitignore  .woodpecker.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.gitea/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  codeql-analysis.yml  matrix-commit.yml  mypy.yml  pytest.yml  yapf.yml
doc/: .readthedocs.yaml  Makefile  api.rst  autodoc.rst  changelog-entry.md  conf.py  examples.md  index.rst  manual.md  quickstart.md  requirements.txt  usage-with-docker.md  with-docker.md
doc/autodoc/: modules.rst  simplematrixbotlib.rst
doc/manual/: api.md  bot.md  config.md  creds.md  encryption.md  import.md  installation.md  listener.md  match.md  messagematch.md
docs/: README.md  examples.md  quickstart.md  requirements.txt
docs/manual/: api.md  bot.md  config.md  creds.md  encryption.md  listener.md  match.md  setup.md
examples/: README.md  echo.py  echo_e2ee.py  echo_reaction.py  high_fives.py  rock_paper_scissors.py
examples/config-files/: config_allowed.toml  config_allowed_interactive.toml  config_bot.py  config_bot_allowed.py  config_bot_allowed_interactive.py  config_custom.py  config_custom.toml
examples/docker-example/: Dockerfile
simplematrixbotlib/: __init__.py  api.py  auth.py  bot.py  callbacks.py  config.py  listener.py  match.py
tests/: path_fix.py  test_match.py  test_one.py
tests/api/: test_api.py
tests/config/: test_config.py
tests/config/sample_config_files/: config1.toml  config2.toml  config3.toml  config4.toml  config5.toml  config6.toml
tests/listener/: test_listener.py
tests/match/: test_match.py  test_messagematch.py
