[tool.poetry]
name = "simplematrixbotlib"
version = "2.8.0"
description = "An easy to use bot library for the Matrix ecosystem written in Python."
authors = ["imbev <imbev@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://codeberg.org/imbev/simplematrixbotlib"
documentation = "https://simple-matrix-bot-lib.readthedocs.io/en/latest/"
keywords = [
    "simple",
    "matrix",
    "bot",
    "lib",
    "simple-matrix-bot-lib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Internet"
]

[tool.poetry.urls]
"Matrix Room" = "https://matrix.to/#/#simplematrixbotlib:matrix.org"

[tool.poetry.dependencies]
python = "^3.8"
matrix-nio = "0.19"
python-cryptography-fernet-wrapper = ">=1.0.4"
pillow = ">=8.2"
markdown = ">=3.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
wheel = "^0.37.0"
twine = "^3.4.2"
pytest = "^6.2.5"
bandit = "^1.7.1"
mypy = "^0.930"
types-Markdown = "^3.3.9"
types-aiofiles = "^0.7.0"
types-toml = "^0.10.1"
yapf = "^0.32.0"
pytest-github-actions-annotate-failures = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
